--- a/README.mdwn
+++ b/README.mdwn
@@ -10,23 +10,14 @@ Images are outputted and cost plots are generated based on the Cost Criterion fo
 This algorithm was applied to Hokusai's Beautiful Women #2 painting. Different cluster sizes and respective costs were examined (c = 1, 2, ... 10).
 
 ### Original Image
-![Original Hokusai image](https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/HokusaiBeautiful.gif?raw=true)
+<img alt = "original image" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/HokusaiBeautiful.gif?raw=true" width="200">
 
 ### Produced Images
-![Produced image c = 1](https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_1.png?raw=true)
-![Produced image c = 2](https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_2.png?raw=true)
-![Produced image c = 3](https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_3.png?raw=true)
-![Produced image c = 4](https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_4.png?raw=true)
-![Produced image c = 5](https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_5.png?raw=true)
-![Produced image c = 6](https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_6.png?raw=true)
-![Produced image c = 7](https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_7.png?raw=true)
-![Produced image c = 8](https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_8.png?raw=true)
-![Produced image c = 9](https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_9.png?raw=true)
-![Produced image c = 10](https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_10.png?raw=true)
 
+<img alt = "image c=1" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_1.png?raw=true" width="200"><img alt = "image c=2" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_2.png?raw=true" width="200"><img alt = "image c=3" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_3.png?raw=true" width="200"><img alt = "image c=4" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_4.png?raw=true" width="200"><img alt = "image c=5" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_5.png?raw=true" width="200"><img alt = "image c=6" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_6.png?raw=true" width="200"><img alt = "image c=7" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_7.png?raw=true" width="200"><img alt = "image c=8" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_8.png?raw=true" width="200"><img alt = "image c=9" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_9.png?raw=true" width="200"><img alt = "image c=10" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_10.png?raw=true" width="200">
 
 
 ### Produced Cost Plot
-![Produced image c = 1](https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/figures/Costs.png?raw=true)
+<img alt = "cost figure" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/figures/Costs.png?raw=true">
 
 
