--- a/README.mdwn
+++ b/README.mdwn
@@ -14,7 +14,8 @@ This algorithm was applied to Hokusai's Beautiful Women #2 painting. Different c
 
 ### Produced Images
 
-<img alt = "image c=1" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_1.png?raw=true" width="200"><img alt = "image c=2" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_2.png?raw=true" width="200"><img alt = "image c=3" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_3.png?raw=true" width="200"><img alt = "image c=4" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_4.png?raw=true" width="200"><img alt = "image c=5" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_5.png?raw=true" width="200"><img alt = "image c=6" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_6.png?raw=true" width="200"><img alt = "image c=7" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_7.png?raw=true" width="200"><img alt = "image c=8" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_8.png?raw=true" width="200"><img alt = "image c=9" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_9.png?raw=true" width="200"><img alt = "image c=10" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_10.png?raw=true" width="200">
+<img alt = "image c=1" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_1.png?raw=true" width="200"><img alt = "image c=2" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_2.png?raw=true" width="200"><img alt = "image c=3" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_3.png?raw=true" width="200"><img alt = "image c=4" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_4.png?raw=true" width="200"><img alt = "image c=5" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_5.png?raw=true" width="200"><img alt = "image c=6" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_6.png?raw=true" width="200"><img alt = "image c=7" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_7.png?raw=true" width="200"><img alt = "image c=8" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_8.png?raw=true" width="200"><img alt = "image c=9" src="https://github.com/natashasaki/k-Means-Color-Quantization/blob/master/images/updated_9.png?raw=true" width="200">
+
 
 
 ### Produced Cost Plot
